syntax = "proto3";

package tasks;

service Tasks {
    rpc CreateAndAssignTo(CreateAndAssignToRequest) returns (CreateAndAssignToResponse);

    rpc MarkAsDone(MarkAsDoneRequest) returns (MarkAsDoneResponse);

    rpc Shuffle(ShuffleRequest) returns (ShuffleResponse);

    rpc GetAll(GetAllRequest) returns (GetAllResponse);
    rpc GetById(GetByIdRequest) returns (GetByIdResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateAndAssignToRequest {
    TaskInfo task_info = 1;

    string assign_to_id = 2;
}

message CreateAndAssignToResponse {
    Status status = 1;

    string public_id = 2;

    string id = 3;
}

message MarkAsDoneRequest {
    string task_id = 1;
}

message MarkAsDoneResponse {
    Status status = 1;
}

message ShuffleRequest {}

message ShuffleResponse {
    Status status = 1;
}

message GetAllRequest { }

message GetAllResponse {
    Status status = 1;

    repeated TaskInfo tasks = 2;
}

message GetByIdRequest {
    string id = 1;
}

message GetByIdResponse {
    Status status = 1;
    TaskInfo task_info = 2;
}

message UpdateRequest {
    string id = 1;
    TaskInfo task_info = 2;
}

message UpdateResponse {
    Status status = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    Status status = 1;
}

message TaskInfo {
    string AssignedToId = 1;

    string Description = 2;

    bool Done = 3;
}

message Status {
    int32 code = 1;

    string msg = 2;
}

// StringContainer нужен для того чтобы отличать отсутствие значения(nil) от пустого значения
message StringContainer {
    string value = 1;
}